Fixed some IDE errors/suggestions